--- a/src/ProjectStyles.css
+++ b/src/ProjectStyles.css
@@ -3,4 +3,9 @@
   justify-content: center;
   align-items: center;
   display: flex;
+  flex-direction: column;
+}
+
+.listStyles > * {
+  width: 100%;
 }
